Mobile friendly fix: No more asking cell phones to resize their browser in Portfolio. Fix image overflow in job_detail on small screens. Distinguish company name from job title in job_detail on small screens. Hide huge column in job_list on small screens.

--- a/resume/static/css/portfolio.css
+++ b/resume/static/css/portfolio.css
@@ -38,8 +38,14 @@ h3 {
     }
 }
 
-span {
-    display: inline-block;
+
+
+@media (max-device-width: 767px), handheld {
+    /* Shut down all the "resize your screen" tricks on non-resizeable screens */
+    .resizeable-only {
+        display: none;
+    }
+
 }
 
 .wider {
