--- a/resume/static/css/resume.css
+++ b/resume/static/css/resume.css
@@ -63,7 +63,8 @@ footer h4 {
 }
 
 .image-panel img {
-    max-width: 300px;
+    /*max-width: 300px;*/
+    width: 100%;
 }
 
 /* For skill logos in job list */
